# CustomRPC

./: .gitignore  Makefile  README.md
cmd/protoc-gen-custom-rpc/: go.mod  go.sum  main.go
cmd/protoc-gen-custom-rpc/generator/: generator.go
cmd/protoc-gen-custom-rpc/plugin/custom/: custom.go
cmd/protoc-gen-go-grpc/: grpc.go  main.go
custom-out/demo/: demo.custom.go
examples/helloworld/: go.mod  go.sum
examples/helloworld/go_client/: main.go
examples/helloworld/go_server/: env.go  mail.go  main.go
examples/helloworld/greeter_client/: main.go
examples/helloworld/greeter_server/: main.go
examples/helloworld/helloworld/: helloworld.custom.go  helloworld.grpc.pb.cc  helloworld.grpc.pb.h  helloworld.pb.cc  helloworld.pb.go  helloworld.proto  helloworld_grpc.pb.go  helloworld_rpc.custom.go
examples/helloworld/helloworld/examples/helloworld/helloworld/: helloworld.pb.cc  helloworld.pb.h
go-out/demo/: demo.pb.go
lua-server/: CMakeLists.txt
lua-server/app/: CMakeLists.txt  main.cpp
lua-server/app/demo/: main.lua  tree.lua
lua-server/cpp_server/: server.cpp
lua-server/simpleServer/: CMakeLists.txt  server.cpp  server.h  server_export.cpp  server_export.h
protoc-tool/: Makefile  go.mod  main.go
protoc-tool/proto/: demo.proto
protoc-tool/protoc/include/google/protobuf/: duration.proto
rpc/: codec.go  go.mod  go.sum  request.go  rpc.go  service.go
rpc/client/: client.go  options.go
rpc/transport/: transport.go
